updated swagger file definitions
